--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">Concesionario</string>
+    <string name="vamos">¡ Vamos !</string>
     <string name="iniciar_sesi_n">Iniciar Sesión</string>
     <string name="boton_iniciar_sesi_n">Boton de Iniciar Sesión</string>
+    <string name="registrarse">Registrarse</string>
     <string name="email">Email</string>
     <string name="contrase_a">Contraseña</string>
+
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut purus id erat scelerisque bibendum sed vel urna.</string>
+    <string name="nombre_de_la_sucursal">Nombre de la sucursal</string>
+    <string name="direccion">Direccion</string>
 </resources>
