--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="iniciar_sesi_n">Iniciar sesión</string>
     <string name="boton_iniciar_sesi_n">Boton de iniciar sesión</string>
     <string name="registrarse">Registrarse</string>
-    <string name="email">Email</string>
-    <string name="contrase_a">Contraseña</string>
+    <string name="email">E-mail</string>
+    <string name="contra">Contraseña</string>
 
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut purus id erat scelerisque bibendum sed vel urna.</string>
     <string name="nombre_de_la_sucursal">Nombre de la sucursal</string>
@@ -13,4 +13,6 @@
     <string name="kurumapp">Kurumapp</string>
     <string name="no_cuenta">¿No tienes una cuenta?</string>
     <string name="registrate">Registrate</string>
+    <string name="bienvenido">Bienvenido</string>
+    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
 </resources>
